Fixed Overflow Css on Mobile

--- a/src/App.css
+++ b/src/App.css
@@ -26,5 +26,4 @@
 
 body {
 	background-color: wheat;
-	overflow: hidden;
 }
