--- a/src/components/Game/GameOverScreen/gameOver.module.css
+++ b/src/components/Game/GameOverScreen/gameOver.module.css
@@ -22,6 +22,7 @@
 	gap: 30vh;
 	place-items: center;
 	justify-content: center;
+	text-align: center;
 	position: absolute;
 	z-index: 100000000;
 	top: 0;
